--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="/images/deepseek_r1_jax.png"><img src="/images/deepseek_r1_jax.png" alt="alttext" width="160" height="auto"></a>
             </td>
             <td width="75%" valign="middle"><a href="https://github.com/jax-ml/jax-llm-examples/tree/main/deepseek_r1_jax"><papertitle>Minimal Deepseek R1 inference</papertitle>
-              </a><br><strong>Robert Dyro</strong>, <!--loopindex: , author_array.size: 1-->
+              </a><br><strong>Robert Dyro</strong> <!--loopindex: , author_array.size: 1-->
               
               <br>
               <p>Open-source Deepseek R1 inference using JAX, minimal yet performant.</p>
